[tool.poetry]
name = "lamstare"
version = "0.1.0"
description = ""
authors = ["Anyang Peng <137014849+anyangml@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "3.9.2"
pandas = "2.2.3"
python-dotenv = "1.0.1"
SQLAlchemy = "2.0.36"
torch = "2.5.1"
deepmd-kit = "v3.0.0b4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
